curiosity-part-commit

--- a/index.html
+++ b/index.html
@@ -8,24 +8,79 @@
   </head>
   <body class="container">
     <!-- Header-part-Started -->
-    <header>
-      <section id="banner-part-container">
-        <div class="banner-part-content">
-          <div class="banner-imge"><img src="./assets/Group.png" alt="" /></div>
-          <div class="banner-part-text">
-            <h3>"In the near future, I hope to become a Developer."</h3>
+    <header id="banner-part-container">
+      <div class="banner-part-content">
+        <div class="banner-imge"><img src="./assets/Group.png" alt="" /></div>
+        <div class="banner-part-text">
+          <h1>"In the near future, I hope to become a Developer."</h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+          <button class="btn">Contract with me</button>
+        </div>
+      </div>
+    </header>
+    <!-- Header-part-End -->
+    <!-- Main-part-Started -->
+    <main>
+      <section id="curiosity-part-container">
+        <div class="curiosity-part-content">
+          <div class="curiosity-tittle">
+            <h3>Why Web Development??</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text.
             </p>
-            <button class="btn">Contract with me</button>
+          </div>
+          <div class="curiosity-explain">
+            <div class="curiosity-text">
+              <h5 class="curiosity-text-tittle">
+                I will Do Coding and Change The World
+              </h5>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <button class="curiosity-btn">Learn More</button>
+            </div>
+            <div class="curiosity-imge">
+              <img src="./assets/Group 3.png" alt="" />
+            </div>
+          </div>
+          <div class="curiosity-explain">
+            <div class="curiosity-imge">
+              <img src="./assets/Layer_1.png" alt="" />
+            </div>
+            <div class="curiosity-text">
+              <h5 class="curiosity-text-tittle">
+                I will help People by creating Modern Web System
+              </h5>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <button class="curiosity-btn">Learn More</button>
+            </div>
+          </div>
+          <div class="curiosity-explain">
+            <div class="curiosity-text">
+              <h5 class="curiosity-text-tittle">
+                I will Do Coding and Change The World
+              </h5>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <button class="curiosity-btn">Learn More</button>
+            </div>
+            <div class="curiosity-imge">
+              <img src="./assets/Group 4.png" alt="" />
+            </div>
           </div>
         </div>
       </section>
-    </header>
-    <!-- Header-part-End -->
-    <!-- Main-part-Started -->
-    <main></main>
+    </main>
     <!-- Main-part-End -->
     <!-- Footer-part-Started -->
     <footer></footer>
