My inspirational-part added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Header-part-End -->
     <!-- Main-part-Started -->
     <main>
+      <!-- <!-Curiosity-part-Started -->
       <section id="curiosity-part-container">
         <div class="curiosity-part-content">
           <div class="curiosity-tittle">
@@ -80,6 +81,33 @@
           </div>
         </div>
       </section>
+      <!-- <!-Curiosity-part-end -->
+
+      <!-- Inspiration-part-Started -->
+      <section id="my-inspiratin-container">
+        <div class="my-inspiration-content">
+          <div class="my-inspiration-tittle">
+            <h3>My Inspiration</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+          </div>
+          <div class="my-inspirational-vedio">
+            <iframe
+              width="1076"
+              height="560"
+              src="https://www.youtube.com/embed/4Mpn3bTGu8A?si=-wUXAY5V-_upRqJg"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </section>
+      <!-- Inspiration-part-end-->
     </main>
     <!-- Main-part-End -->
     <!-- Footer-part-Started -->
