Target-part added

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <!-- Inspiration-part-Started -->
       <section id="my-inspiratin-container">
         <div class="my-inspiration-content">
-          <div class="my-inspiration-tittle">
+          <div class="my-inspiration-tittle tittle">
             <h3>My Inspiration</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -108,6 +108,45 @@
         </div>
       </section>
       <!-- Inspiration-part-end-->
+      <!-- Target-part-start-->
+      <section id="target-part-container">
+        <div class="target-part-content">
+          <div class="target-part-tittle tittle">
+            <h3>My Current Target</h3>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text.
+            </p>
+          </div>
+          <div class="target-part-card">
+            <div class="target-card-html">
+              <img src="./assets/html.png" alt="logo" />
+              <h3>HTML</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <span>
+                <a href="https://www.w3schools.com/html/">Learn More</a></span
+              >
+            </div>
+            <div class="target-card-css-card">
+              <img src="./assets/css.png" alt="css-img" />
+              <h3>CSS</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <span>
+                <a href="https://www.w3schools.com/Css/">Learn More</a></span
+              >
+            </div>
+            <div class="target-card-js-card">
+              <img src="./assets/js.png" alt="js-img" />
+              <h3>JS</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <span>
+                <a href="https://www.w3schools.com/Js/">Learn More</a></span
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Target-part-end-->
     </main>
     <!-- Main-part-End -->
     <!-- Footer-part-Started -->
