footer-part added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text.
           </p>
-          <button class="btn">Contract with me</button>
+          <button>
+            <a class="banner-btn" href="#footer-container">Contract with me</a>
+          </button>
         </div>
       </div>
     </header>
@@ -121,24 +123,30 @@
           <div class="target-part-card">
             <div class="target-card-html">
               <img src="./assets/html.png" alt="logo" />
-              <h3>HTML</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <h4>HTML</h4>
+              <p class="card-para">
+                Lorem Ipsum is simply dummy text of the printing.
+              </p>
               <span>
                 <a href="https://www.w3schools.com/html/">Learn More</a></span
               >
             </div>
             <div class="target-card-css-card">
               <img src="./assets/css.png" alt="css-img" />
-              <h3>CSS</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <h4>CSS</h4>
+              <p class="card-para">
+                Lorem Ipsum is simply dummy text of the printing.
+              </p>
               <span>
                 <a href="https://www.w3schools.com/Css/">Learn More</a></span
               >
             </div>
             <div class="target-card-js-card">
               <img src="./assets/js.png" alt="js-img" />
-              <h3>JS</h3>
-              <p>Lorem Ipsum is simply dummy text of the printing.</p>
+              <h4>JS</h4>
+              <p class="card-para">
+                Lorem Ipsum is simply dummy text of the printing.
+              </p>
               <span>
                 <a href="https://www.w3schools.com/Js/">Learn More</a></span
               >
@@ -150,7 +158,30 @@
     </main>
     <!-- Main-part-End -->
     <!-- Footer-part-Started -->
-    <footer></footer>
+    <footer id="footer-container">
+      <div class="footer-content">
+        <div class="footer-text">
+          <h5>An Open Commitment by Munni Khanam</h5>
+        </div>
+        <div class="footer-icon">
+          <div>
+            <a href="https://www.facebook.com/"
+              ><img src="./assets/facebook.png" alt=""
+            /></a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/feed/"
+              ><img src="./assets/linkedin-icon 1.png" alt=""
+            /></a>
+          </div>
+          <div>
+            <a href="https://github.com/"
+              ><img src="./assets/github.png" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- Footer-part-End -->
   </body>
 </html>
