Finished assaignment commit

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="banner-part-text">
           <h1>"In the near future, I hope to become a Developer."</h1>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text.
+            "Start with something simple and small, then expand over time."
+            InshaAllah I will be a succesful web-developer.
           </p>
           <button>
             <a class="banner-btn" href="#footer-container">Contract with me</a>
@@ -29,11 +29,13 @@
       <!-- <!-Curiosity-part-Started -->
       <section id="curiosity-part-container">
         <div class="curiosity-part-content">
-          <div class="curiosity-tittle">
+          <div class="curiosity-tittle tittle">
             <h3>Why Web Development??</h3>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text.
+              There ia an icreasing demand for web developers.Businesses are
+              always lookout for a good developers for their growing business.Of
+              course, this is one of the best skills that give you a chance to
+              earn money.
             </p>
           </div>
           <div class="curiosity-explain">
@@ -42,8 +44,8 @@
                 I will Do Coding and Change The World
               </h5>
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
+                I can work for an organization as a developer and can creat my
+                own start-up with it.
               </p>
               <button class="curiosity-btn">Learn More</button>
             </div>
@@ -60,8 +62,9 @@
                 I will help People by creating Modern Web System
               </h5>
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
+                People now a days are more depends on web platform. They need
+                this for their business operations, e-commerce maintainace and
+                better communication with customers
               </p>
               <button class="curiosity-btn">Learn More</button>
             </div>
@@ -72,8 +75,8 @@
                 I will Do Coding and Change The World
               </h5>
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
+                It offers opportunities to express creativity through designing
+                visually appealing and user-friendly websites.
               </p>
               <button class="curiosity-btn">Learn More</button>
             </div>
@@ -91,8 +94,10 @@
           <div class="my-inspiration-tittle tittle">
             <h3>My Inspiration</h3>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text.
+              I inspired by Jhankar Mahbub Vaiya because his inspirational
+              speech that give me strength and courage for do anything
+              impossible. He always say, 'Believe in your-self and do your
+              best'.
             </p>
           </div>
           <div class="my-inspirational-vedio">
@@ -116,8 +121,9 @@
           <div class="target-part-tittle tittle">
             <h3>My Current Target</h3>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text.
+              It is a long journey but I establish myself as a front-end
+              developer first. Then I must move forward .This learning journey
+              will be continue.
             </p>
           </div>
           <div class="target-part-card">
@@ -125,7 +131,8 @@
               <img src="./assets/html.png" alt="logo" />
               <h4>HTML</h4>
               <p class="card-para">
-                Lorem Ipsum is simply dummy text of the printing.
+                HTML means Hyper-text-markup language.It is used to structure a
+                web page and it's content
               </p>
               <span>
                 <a href="https://www.w3schools.com/html/">Learn More</a></span
@@ -135,7 +142,8 @@
               <img src="./assets/css.png" alt="css-img" />
               <h4>CSS</h4>
               <p class="card-para">
-                Lorem Ipsum is simply dummy text of the printing.
+                Cascading Style Sheets that describes how HTML elements are to
+                be displayed on screen.
               </p>
               <span>
                 <a href="https://www.w3schools.com/Css/">Learn More</a></span
@@ -145,7 +153,8 @@
               <img src="./assets/js.png" alt="js-img" />
               <h4>JS</h4>
               <p class="card-para">
-                Lorem Ipsum is simply dummy text of the printing.
+                Javascript is abbreviated as JS , is a scripting language and
+                core technology of the web.
               </p>
               <span>
                 <a href="https://www.w3schools.com/Js/">Learn More</a></span
@@ -155,6 +164,27 @@
         </div>
       </section>
       <!-- Target-part-end-->
+      <!-- Support-part started -->
+      <section id="support-part">
+        <div class="support-patrt-content">
+          <div class="tittle">
+            <h5 class="support-header">I need Support</h5>
+            <p class="support-para">
+              I have Programming-Hero, a great platform to grow and develo my
+              learnig and career
+            </p>
+          </div>
+          <div class="input-box">
+            <input
+              class="support-box"
+              type="text"
+              placeholder="Suggest anything for me"
+            />
+            <input class="submit-btn" type="submit" value="submit" />
+          </div>
+        </div>
+      </section>
+      <!-- Support-part end-->
     </main>
     <!-- Main-part-End -->
     <!-- Footer-part-Started -->
